; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_unit.c_unit_notify_user_lookup.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_unit.c_unit_notify_user_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unit_notify_user_lookup(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @assert(i32* %8)
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @unit_ref_uid_gid(i32* %10, i32 %11, i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp sgt i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @unit_add_to_dbus_queue(i32* %17)
  br label %19

19:                                               ; preds = %16, %3
  ret void
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @unit_ref_uid_gid(i32*, i32, i32) #1

declare dso_local i32 @unit_add_to_dbus_queue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
